<resources>
    <string name="app_name">Slider Menu</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string-array name="nav_drawer_items">
        <item >Test Picker</item>
        <item >Assumption Tester</item>
        <item >Install R Commander</item>
        <item ></item>
        <item ></item>
        <item ></item>
    </string-array>
    <string name="next_button">Next</string>
    <string name="prev_button">Prev</string>
    <string name="rpic">R Installation Pictures</string>
    <string name="step1">1) To install R you need to go to the homepage. Type http://www.r-project.org/ into your browser.</string>
    <string name="step2">2) In this example we will install R on a Windows machine so select \"Download R for Windows\".</string>
    <string name="step3">3) In this window, select the basic installation labelled as \'base\'.</string>
    <string name="step4">4) Next, select download R(version number) for Windows.</string>
    <string name="step5">5) Select your language.</string>
    <string name="step6">6) Select next.</string>
    <string name="step7">7) Select next.</string>
    <string name="step8">8) Select next.</string>
    <string name="step9">9) If your machine is 64 bit, then select this option from the dropdown menu or deselct the 32bit tab shown.</string>
    <string name="step10">10) If no is selected, click next.</string>
    <string name="step11">11) Click next.</string>
    <string name="step12">12) Click next.</string>
    <string name="step13">13) To use R with an easyto use graphical interface and avoid writing short programming scripts we can
        install the R Commander. To do this enter the command shown and press enter. It may ask you to select your country as 
        part of the installation.</string>
    <string name="step14">14) Now that R Commander is installed, we mustload it up using the command shown.</string>
    <string name="step15">15) Congratulations, you have installed R and the easy to use R Commander interface.</string>
    <string name="desc_list_item_icon">Item Icon</string>
     <string name="content_guru">Guru Image</string>
    <string name="content_question">Image with Question</string>
    <string name="content_help">Help Button</string>
    <string name="content_butler">Butler</string>
    <string name="startChecking">Start Checking</string>
    <string name="assumptionsHome">Statistical tests are great, but they are only reliable if certain assumptions about the data hold true. 
        Each test has different assumptions so it gets confunsing. Luckily Bat Stats will tell you the assuption you need to meet for each test
        and will also suggest alternative tests when your assumptions are not met. Click below to start!</string>
    <string name="As1">
    1)   You\'re two variables should be continuous.\n\n
    2)   You\'re two varibles should have a linear relationship.\n\n
    3)   You\'re data has no significant outliers.\n\n
    4)   You\'re variables should be normally distributed.\n\n
    </string>
    <string name="As2">
    If your data violates any of these assumptions you should
    consider using one of the following: \n\n
    
    1)    Bootstrap Correlation \n\n
    2) 	  Regression \n\n
    3)	  Spearman Correlation \n\n
    4)    Kendall\'s tau. \n\n
    </string>
    <string name="As3">
    1)   You\'re dependent variable should be continuous\n\n
    2)   You\'re independent variable should consist of one group that is measured at two different time points.\n\n
    3)   You\'re two related groups should not have outliers showing unusually significant changes between tim-points.\n\n
    4)   The differences in the dependent variable between the two related groups should be approximately normally distributed.\n\n
    </string>
    <string name="As4">
    If your data violates any of these assumptions you should
    consider using one of the following: \n\n
    
    1)    Bootstapped t-test.\n\n
    2) 	  Wilcoxon matched-pairs test.\n\n
    </string>
    <string name="As5">
    1)   Your dependent variable should be continuous.\n\n
    2)   You\'re independent variable should consist of two independent groups, for example males and females.\n\n
    3)   Your groups should have true independence meaning that their are no hidden relationships. For example, the same participant can not be on both groups.\n\n
    4)   Each group of the independent variable should display an approximately normal distribution for the dependent variable.\n\n
    5.)  There should be no skewness arising from significant outliers.\n\n
    6.)  There should be homogeneity of variance. \n\n
    </string>
    <string name="As6">
    If your data violates any of these assumptions you should
    consider using one of the following: \n\n
    
    1)    Bootstapped t-test. \n\n
    2) 	  Mann-Whitney Test. \n\n
    </string>
    <string name="As7">
    1)   The dependent variable should be continuous.\n\n
    2)   The independent variable should have at least two related groups. For example, a group of smokers measured at two time points.\n\n
    3)   The data should be skewed by significant outliers.\n\n
    4)   The differences in the dependent variable between the two related groups should be approximately normally distributed.\n\n
    5)   The assumption of sphericity cannotbe violated. This means that the differences between all possible pairs of groups should have a similar variance. This assumption can be tested using Mauchly\'s test of sphericity.\n\n 
    </string>
    <string name="As8">
    If your data violates any of these assumptions you should
    consider using one of the following: \n\n
    
    1)    Bootstrappped ANOVA. \n\n
    2) 	  Friedman\'s ANOVA. \n\n
    </string>
    <string name="As9">
    1)   The dependent variable should be continuous.\n\n
    2)   You\'re independent variable should consist of two independent groups, for example males and females.\n\n
    3)   Your groups should have true independence meaning that their are no hidden relationships. For example, the same participant can not be on both groups.\n\n
    4)   There should be no skewness arisingfrom significant outliers.\n\n
    5)   Each group of the independent variable should display an approximately normal distribution for the dependent variable.\n\n 
    6)   There should be homogeneity of variances. This can be tested with Levene\'s test. \n\n
    </string>
    <string name="As10">
    If your data violates any of these assumptions you should
    consider using one of the following: \n\n
    
    1)    Robust ANOVA.\n\n
    2) 	  Kruskal Wallace Test. \n\n
    </string>
    <string name="As11">
    1)   The dependent variable should be continuous.\n\n
    2)   You must two or more independent variables which can be continuous or categorical.\n\n
    3)   Your groups should have true independence meaning that their are no hidden relationships. For example, the same participant can not be on both groups.\n\n
    4)   All relationships between the indepednt variables and the dependent variables should be linear.\n\n
    5)   Your data should display homoscedasticity which means that the variance of your variables be similar along different levels of the Independent variables. \n\n 
    6)   You must avoid multicollinearity which refers to correlations between the Independent variables.\n\n
    7)   There should be no skewness arising from significant outliers.\n\n
    8)   Residuals should not vary considerably and should therefore resemble a normal distribution.
    </string>
    <string name="As12">
    If your data violates any of these assumptions you should
    consider using one of the following: \n\n
    
    1)    Bootstraped Multiple Regression. \n\n
    </string>
    <string name="As13">
    1)   The dependent variable should be continuous.\n\n
    2)   You must two or more independent variables which can be continuous or categorical.\n\n
    3)   Their should be two or more within-subjects factors. These related groups should also be categorical.\n\n
    4)   There should be no skewness arising from significant outliers.\n\n
    5)   The differences in the dependent variable between any two of the related groups should be approximately normally distributed.\n\n 
    6)   The assumption of spehricity cannot be violated. This means that the differences between all possible pairs of groups should have a similar variance. This assumption can be tested using Mauchly\'s test of sphericity.\n\n
    </string>
    <string name="As14">
    If your data violates any of these assumptions you should
    consider using one of the following: \n\n
    
    1)    Robust Factorial Repeated Measures ANOVA. \n\n
    </string>
    <string name="As15">
    1)   The dependent variable should be continuous.\n\n
    2)   The independent variables should consist of at least two categorical, independent groups.\n\n
    3)   Your groups should have true independence meaning that their are no hidden relationships. For example, the same participant can not be on both groups.\n\n
    4)   There should be no skewness arising from significant outliers.\n\n
    5)   The differences in the dependent variable between any two of the related groups should be approximately normally distributed.\n\n 
    6)   There should be homogeneity of variances for all pairs of independent variables. This can be tested with Levene\'s test.\n\n
    </string>
    <string name="As16">
    If your data violates any of these assumptions you should
    consider using one of the following: \n\n
    
    1)    Robust Independent Factorial ANOVA. \n\n
    2)    Multiple Regression.\n\n
    </string>
    <string name="As17">
    1)   The dependent variable should be continuous. \n\n
    2)   Your within-subjects independent variables should have 2 or more categorical, dependent groups.\n\n
    3)   Your between-subjects independent variables should have 2 or more categorical, independent groups.\n\n
    4)   There should be no skewness arising from significant outliers in either of the between-subjects or within-subjects groups.\n\n
    5)   The differences in the dependent variable between any two of the groups should be approximately normally distributed.\n\n 
    6)   There should be homogeneity of variances for all pairs of factors. This can be tested with Levene\'s test.\n\n
    7)   The assumption of spehricity cannot be violated. This means that the differences between all possible pairs of groups should have a similar variance. This assumption can be tested using Mauchly\'s test of sphericity.
    </string>
    <string name="As18">
    If your data violates any of these assumptions you should
    consider using one of the following: \n\n
    
    1)    Robust Factorial Mixed ANOVA.\n\n
    </string>
    <string name="One">One</string>
    <string name="MoreThanOne">Two or More</string>
</resources>